desktop-port: RENDERS — capture the game's real splash screen on Linux
Add framebuffer screenshot capture (glReadPixels -> STB PNG) and record the
milestone: the game renders its actual "Fantasy Legend Studios" title screen
natively on Linux via the LWJGL3 backend (docs/screenshot-splash.png), under
Xvfb + Mesa software GL. Full chain verified: obfuscated bytecode -> custom
LWJGL3 backend -> GLFW/OpenGL -> RPGMain -> real UI rendering.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HmrQih4ir9npZDbxquawsG